--- a/src/main/webapp/personnel/supervisor/create.xhtml
+++ b/src/main/webapp/personnel/supervisor/create.xhtml
@@ -1,42 +1,52 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="./../../template.xhtml"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="content">
+        <h2>Cadastro de Supervisor</h2>
         <h:form>
-            <h:panelGrid columns="3" cellpadding="5" style="width: 100%">           
-                <h:outputLabel value="Código: " /> 
-                <h:inputText id="code" value="#{supervisorBean.supervisor.code}"
-                             required="true"  requiredMessage="Digite o código do supervisor" 
+            <p:growl id="messages" showDetail="true" /> 
+
+            <h:panelGrid id="grid" columns="3" cellpadding="10" style="margin-bottom: 20px;" >        
+                <h:outputLabel for="code" value="Código: " style="font-weight: bold;" /> 
+                <p:inputText id="code" label="Código" value="#{supervisorBean.supervisor.code}"
+                             required="true" requiredMessage="Digite o código do supervisor" 
                              style="width: 250px;" />
-                <h:message for="code" style="color:red" />
-                <h:outputLabel value="Nome: " />            
-                <h:inputText id="name" value="#{supervisorBean.supervisor.name}"
+                <p:message for="code" />
+
+                <h:outputLabel for="name" value="Nome: " style="font-weight: bold;" />            
+                <p:inputText id="name" value="#{supervisorBean.supervisor.name}"
                              required="true" requiredMessage="Digite o nome do supervisor" 
                              style="width: 250px;" />
-                <h:message for="name" style="color:red" />
-                <h:outputLabel value="Login: " /> 
-                <h:inputText id="login" value="#{supervisorBean.supervisor.login}"
-                             required="true"  requiredMessage="Digite o login do supervisor" 
+                <p:message for="name" />
+
+                <h:outputLabel for="login" value="Login: " style="font-weight: bold;" />            
+                <p:inputText id="login" value="#{supervisorBean.supervisor.login}"
+                             required="true" requiredMessage="Digite o login do supervisor" 
                              style="width: 250px;" />
-                <h:message for="login" style="color:red" />
-                <h:outputLabel value="Senha: " /> 
-                <h:inputText id="password1" value="#{supervisorBean.supervisor.password}"
-                             required="true"  requiredMessage="Digite a senha do supervisor" 
-                             style="width: 250px;" />
-                <h:message for="password1" style="color:red" />
-                <h:outputLabel value="Confirmar Senha: " /> 
-                <h:inputText id="password2" value="#{supervisorBean.password}"
-                             required="true"  requiredMessage="Digite a confirmação da senha do supervisor" 
-                             style="width: 250px;" />
-                <h:message for="password2" style="color:red" />
-                <h:outputLabel value="#{supervisorBean.message}"
-                               style="color:red" />
+                <p:message for="login" />
+
+                <h:outputLabel for="password1" value="Senha: " style="font-weight: bold;" /> 
+                <p:password id="password1" value="#{supervisorBean.supervisor.password}" 
+                            feedback="true" match="password2" label="Senha" required="true" 
+                            promptLabel="Senha" weakLabel="Fraca" goodLabel="Boa" 
+                            strongLabel="Forte" requiredMessage="Digite a senha do supervisor" 
+                            validatorMessage="As senhas não conferem" style="width: 250px;" />
+                <p:message for="password1" />
+
+                <h:outputLabel for="password2" value="Confirmar Senha: " style="font-weight: bold;" /> 
+                <p:password id="password2" label="Confirmação da senha" required="true" 
+                            requiredMessage="Digite a senha do supervisor novamente" style="width: 250px;" />
+                <p:message for="password2" />
             </h:panelGrid>
-            <h:commandButton value="Inserir" 
-                             action="#{supervisorBean.insert()}"/>
+
+            <p:commandButton value="Inserir" action="#{supervisorBean.insert()}" 
+                             update="grid, messages" title="Inserir o supervisor" 
+                             style="font-size: 18px;" />
         </h:form>
     </ui:define>
 
