--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     
     <h:body>
-        <ui:composition template="./template.xhtml">
+        <ui:composition template="/WEB-INF/templates/template.xhtml">
             <ui:define name="content"/>
         </ui:composition>
     </h:body>
