--- a/src/main/webapp/personnel/sector/create.xhtml
+++ b/src/main/webapp/personnel/sector/create.xhtml
@@ -10,7 +10,7 @@
     <ui:define name="content">
         <h2>Cadastro de Setor</h2>
         <h:form>
-            <p:growl id="messages" showDetail="true" />  
+            <p:growl id="messages" showDetail="true" life="#{parametersBean.growlLife}" />  
             
             <h:panelGrid id="grid" columns="3" cellpadding="10" style="margin-bottom: 20px;" >      
                 <h:outputLabel for="name" value="Nome: " style="font-weight: bold;" /> 
