created time clock event registration screen

--- a/src/main/webapp/events/entry/create.xhtml
+++ b/src/main/webapp/events/entry/create.xhtml
@@ -8,7 +8,7 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="content">
-        <h2>Cadastro de Sinistro</h2>
+        <h2>Cadastro de Atividades de Produção</h2>
         <h:form>
             <p:growl id="messages" showDetail="true" life="#{parametersBean.growlLife}" />  
             
