--- a/src/main/webapp/personnel/manager/register.xhtml
+++ b/src/main/webapp/personnel/manager/register.xhtml
@@ -6,13 +6,15 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
-
     <ui:define name="content">
-        <h2>Cadastro de Gerente</h2>
         <h:form>
             <p:growl id="messages" showDetail="true" life="#{parametersBean.growlLife}" /> 
             
             <h:panelGrid id="grid" columns="1" cellpadding="10">
+                <f:facet name="header">
+                    <h:outputText value="Cadastro de Gerente" style="font-weight: bold; font-size: 24px;" />
+                </f:facet>
+                
                 <h:panelGrid columns="2" cellpadding="10">        
                     <h:outputLabel for="code" value="Código: " style="font-weight: bold;" /> 
                     <p:inputText id="code" label="Código" value="#{managerBean.manager.code}"
@@ -60,5 +62,4 @@
             </h:panelGrid>
         </h:form>
     </ui:define>
-
 </ui:composition>
