Altered to registration

--- a/src/main/webapp/events/timeClock/register.xhtml
+++ b/src/main/webapp/events/timeClock/register.xhtml
@@ -48,8 +48,8 @@
                 
                 <p:outputLabel for="type" value="Tipo: " style="font-weight: bold;" /> 
                 <p:selectBooleanButton id="type" value="#{timeClockEventBean.timeClockEvent.arrival}" 
-                                       onLabel="Entrada" offLabel="Saída" onIcon="ui-icon-arrowthick-1-w"
-                                       offIcon="ui-icon-arrowthick-1-e" />
+                                       onLabel="Entrada" offLabel="Saída" onIcon="ui-icon-arrowthick-1-e"
+                                       offIcon="ui-icon-arrowthick-1-w" />
                 
                 <f:facet name="footer">
                     <p:commandButton value="Registrar" action="#{timeClockEventBean.register()}" 
