--- a/src/main/webapp/personnel/subordinate/register.xhtml
+++ b/src/main/webapp/personnel/subordinate/register.xhtml
@@ -26,8 +26,8 @@
                              style="width: 250px;" />
                     
                 <f:facet name="footer">
-                    <p:commandButton value="Inserir" action="#{subordinateBean.insert()}" 
-                                     update="@form" title="Inserir o subordinado"
+                    <p:commandButton value="Registrar" action="#{subordinateBean.register()}" 
+                                     update="@form" title="Registrar o subordinado"
                                      style="font-size: 18px;" />
                 </f:facet>
             </h:panelGrid>
