phaseProductionOrder is working

--- a/src/main/webapp/events/timeClock/register.xhtml
+++ b/src/main/webapp/events/timeClock/register.xhtml
@@ -12,7 +12,8 @@
             
             <h:panelGrid id="grid" columns="2" cellpadding="10">   
                 <f:facet name="header">
-                    <h:outputText value="Cadastro de Entrada/Saída de Ponto" style="font-weight: bold; font-size: 24px;" />
+                    <h:outputText value="Cadastro de Entrada/Saída de Ponto" 
+                                  style="font-weight: bold; font-size: 24px;" />
                 </f:facet>
                 
                 <p:outputLabel for="date" value="Data: " style="font-weight: bold;" /> 
