--- a/src/main/webapp/production/phase/register.xhtml
+++ b/src/main/webapp/production/phase/register.xhtml
@@ -26,8 +26,9 @@
                                  effect="fade" var="sec" style="width: 250px;" filter="true" 
                                  filterMatchMode="startsWith" required="true"
                                  requiredMessage="Selecione o setor onde está fase é executada!!!"
-                                 converterMessage="Setor inválido!!!">
-                    <f:selectItem itemLabel="Selecione um" itemValue="#{phaseBean.emptySector}"
+                                 converterMessage="Setor inválido!!!"
+                                 disabled="#{empty phaseBean.sectors}">
+                    <f:selectItem itemLabel="Selecione um ..." itemDisabled="true"
                                   noSelectionOption="true" />
                     
                     <f:selectItems value="#{phaseBean.sectors}" var="sector" 
