not importing EntryEvents

--- a/src/main/webapp/events/timeClock/register.xhtml
+++ b/src/main/webapp/events/timeClock/register.xhtml
@@ -17,7 +17,7 @@
                 </f:facet>
                 
                 <p:outputLabel for="date" value="Data: " style="font-weight: bold;" /> 
-                <p:calendar id="date" value="#{timeClockEventBean.date}" pattern="dd-MM-yyyy" effect="fade"
+                <p:calendar id="date" value="#{timeClockEventBean.date}" pattern="dd/MMM/yyyy" effect="fade"
                             mask="true" maskAutoClear="true" navigator="true" required="true"
                             requiredMessage="Selecione a data da entrada/saída!!!" 
                             converterMessage="Data com formato errado!!!" locale="pt" 
