created supervisor and manager alter pages

--- a/src/main/webapp/events/entry/register.xhtml
+++ b/src/main/webapp/events/entry/register.xhtml
@@ -67,7 +67,7 @@
                         </p:column>
                     </p:selectOneMenu>
 
-                    <p:outputLabel for="model" value="Modelo: " style="font-weight: bold;" />
+                    <p:outputLabel for="model" value="Referência: " style="font-weight: bold;" />
                     <h:outputText id="model" value="#{entryEventBean.productionOrder.model.reference}" />
 
                     <p:outputLabel for="phase" value="Fase: " style="font-weight: bold;" /> 
