created search pages for events in a given period

--- a/src/main/webapp/events/timeClock/register.xhtml
+++ b/src/main/webapp/events/timeClock/register.xhtml
@@ -55,7 +55,7 @@
                 
                 <f:facet name="footer">
                     <p:commandButton value="Registrar" action="#{timeClockEventBean.register()}" 
-                                     update="@form" title="Registrar o sinistro"
+                                     update="@form" title="Registrar a entrada/saída"
                                      style="font-size: 18px;" />
                 </f:facet>
             </h:panelGrid>
